--- a/test_manual.ipynb
+++ b/test_manual.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Ondra\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -55,7 +63,7 @@
        ")"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +72,7 @@
     "import torch\n",
     "from transformers import BertForSequenceClassification, BertTokenizer\n",
     "\n",
-    "model_path = \"./emotion_model\"  # or wherever you saved it\n",
+    "model_path = \"./emotion_model_mini\"  # or wherever you saved it\n",
     "\n",
     "model = BertForSequenceClassification.from_pretrained(model_path)\n",
     "tokenizer = BertTokenizer.from_pretrained(model_path)\n",
@@ -74,36 +82,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Joy\n"
+      "Class 0 (Sadness): 0.02%\n",
+      "Class 1 (Joy): 0.06%\n",
+      "Class 2 (Love): 0.00%\n",
+      "Class 3 (Anger): 99.89%\n",
+      "Class 4 (Fear): 0.02%\n",
+      "Class 5 (Surprise): 0.01%\n"
      ]
     }
    ],
    "source": [
-    "text = \"I am really sad\"\n",
+    "import numpy as np\n",
+    "\n",
+    "text = \"creepy\"\n",
     "inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, padding=True)\n",
     "\n",
     "with torch.no_grad():\n",
     "    outputs = model(**inputs)\n",
     "    logits = outputs.logits\n",
-    "    predicted_class_id = logits.argmax().item()\n",
+    "    softmax_outputs = torch.softmax(logits, dim=1)\n",
+    "    predicted_class_id = softmax_outputs.argmax().item()\n",
     "\n",
-    "print(\n",
-    "    [\n",
-    "        \"Sadness\",\n",
-    "        \"Joy\",\n",
-    "        \"Love\",\n",
-    "        \"Anger\",\n",
-    "        \"Fear\",\n",
-    "        \"Surprise\"\n",
-    "    ][predicted_class_id]\n",
-    ")"
+    "    probs = softmax_outputs[0]  # Shape: (num_classes,)\n",
+    "    percentages = (probs * 100).tolist()\n",
+    "\n",
+    "    for i, p in enumerate(percentages):\n",
+    "        print(f\"Class {i} ({['Sadness','Joy','Love','Anger','Fear','Surprise'][i]}): {p:.2f}%\")"
    ]
   },
   {
@@ -123,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
