main: Minor changes.

--- a/base_test_manual.ipynb
+++ b/base_test_manual.ipynb
@@ -72,7 +72,7 @@
     "import torch\n",
     "from transformers import BertForSequenceClassification, BertTokenizer\n",
     "\n",
-    "model_path = \"./emotion_model_biglr_full\"  # or wherever you saved it\n",
+    "model_path = \"./emotion_model_biglr_full\"\n",
     "\n",
     "model = BertForSequenceClassification.from_pretrained(model_path)\n",
     "tokenizer = BertTokenizer.from_pretrained(model_path)\n",
