--- a/final.ipynb
+++ b/final.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
     "import torch\n",
     "from transformers import BertForSequenceClassification, BertTokenizer\n",
     "\n",
-    "model_path = \"./parent_model\"  # or wherever you saved it\n",
+    "model_path = \"./parent_model\"\n",
     "\n",
     "model = BertForSequenceClassification.from_pretrained(model_path)\n",
     "tokenizer = BertTokenizer.from_pretrained(model_path)\n",
